@@ -1,3 +1,7 @@
+2000-12-26  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Edit colors in palette editor.
+
 2000-12-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* savepcx.cc: fixed 8 bit output (RGB <-> BGR)
 	* mapedit/.cvsignore: added 'paltest'
